test/good/erased_under_erased_pi.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let 0 T : (0 A : U) -> U = \A. A -> A;

zero
