test/bad/erased_function_applied.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let bad : (0 g : Nat -> Nat) -> Nat = \g. g zero;
bad
